--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p class="p-title name">Uthmaan Breda</p>
           <p class="p-title num">1.0</p>
         </div>
-        <div class="content-left">
+        <div class="content-left container">
           <div>
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="content-right">
+        <div class="content-right container">
           <img
             class="profile"
             src="./images/profile.JPG"
@@ -111,7 +111,7 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Aspiring FULL STACK Developer</h1>
+            <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
               tenetur tempora animi similique pariatur illo quaerat explicabo
@@ -133,7 +133,7 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Education & Experience</h1>
+            <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
               tenetur tempora animi similique pariatur illo quaerat explicabo
@@ -185,12 +185,13 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Aspiring FULL STACK Developer</h1>
+            <h1>
+              My current <span class="stndout">SKILLS</span> in coding and in
+              general
+            </h1>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              tenetur tempora animi similique pariatur illo quaerat explicabo
-              esse dolores amet fuga, dicta natus error deleniti culpa, labore
-              modi praesentium aliquam.
+              What you see here is what I know, or of what I am learning. I
+              enjoy leaning new things and perfecting what I know.
             </p>
           </div>
         </div>
@@ -200,6 +201,7 @@
           <i class="fab fa-css3-alt skill-icon"></i>
           <i class="fab fa-python skill-icon"></i>
           <i class="fab fa-js-square skill-icon"></i>
+          <i class="fas fa-users skill-icon"></i>
         </div>
       </div>
     </section>
@@ -212,45 +214,65 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>PROJECTS</h1>
+            <h1>My <span class="stndout">PROJECTS</span></h1>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Here is a list of Projects I am working on, or have worked on.
             </p>
           </div>
           <div class="dots">
-            <span class="dot" onclick="currentSlide(1)">Timeline</span>
-            <span class="dot" onclick="currentSlide(2)">Testimonial</span>
-            <span class="dot" onclick="currentSlide(3)">Contact Form</span>
-            <span class="dot" onclick="currentSlide(4)">Project Cards</span>
-            <span class="dot" onclick="currentSlide(5)">project5</span>
-            <span class="dot sld6" onclick="currentSlide(6)">project6</span>
+            <span class="dot" onclick="currentSlide(1)"
+              >Timeline <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
+            <span class="dot" onclick="currentSlide(2)"
+              >Testimonial <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
+            <span class="dot" onclick="currentSlide(3)"
+              >Contact Form <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
+            <span class="dot" onclick="currentSlide(4)"
+              >Project Cards <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
+            <span class="dot" onclick="currentSlide(5)"
+              >project5 <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
+            <span class="dot sld6" onclick="currentSlide(6)"
+              >project6 <i class="fas fa-external-link-alt proj-icon"></i
+            ></span>
           </div>
         </div>
 
         <div class="content-right slide">
           <div class="slideshow-container">
-            <div class="mySlides fade">
-              <img src="./images/timeline.png" style="width: 100%" />
+            <div class="mySlides fade" style="display: block">
+              <a href="https://naughty-edison-e09493.netlify.app"
+                ><img src="./images/timeline.png" style="width: 100%"
+              /></a>
             </div>
 
             <div class="mySlides fade">
-              <img src="./images/testimonial.png" style="width: 100%" />
+              <a href="https://keen-ramanujan-cb8943.netlify.app"
+                ><img src="./images/testimonial.png" style="width: 100%"
+              /></a>
             </div>
 
             <div class="mySlides fade">
-              <img src="./images/contact form.png" style="width: 100%" />
+              <a href="https://upbeat-shaw-31e034.netlify.app/"
+                ><img src="./images/contact form.png" style="width: 100%"
+              /></a>
             </div>
 
             <div class="mySlides fade">
-              <img src="./images/project-cards.png" style="width: 100%" />
+              <a href="https://vigorous-poitras-6ae56e.netlify.app"
+                ><img src="./images/project-cards.png" style="width: 100%"
+              /></a>
             </div>
 
             <div class="mySlides fade">
-              <img src="#" style="width: 100%" />
+              <a href="#"><img src="#" style="width: 100%" /></a>
             </div>
 
             <div class="mySlides fade">
-              <img src="#" style="width: 100%" />
+              <a href="#"><img src="#" style="width: 100%" /></a>
             </div>
           </div>
         </div>
@@ -265,7 +287,7 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Aspiring FULL STACK Developer</h1>
+            <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
               tenetur tempora animi similique pariatur illo quaerat explicabo
@@ -287,17 +309,49 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Aspiring FULL STACK Developer</h1>
-            <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              tenetur tempora animi similique pariatur illo quaerat explicabo
-              esse dolores amet fuga, dicta natus error deleniti culpa, labore
-              modi praesentium aliquam.
-            </p>
+            <h1><span class="stndout">HIRE</span> ME</h1>
+            <p class="description">We can get a coffee, or give me a call</p>
+          </div>
+          <div class="cnt-me">
+            <div class="cnt-box mailer">
+              <a
+                class="cnt-me-link icon"
+                href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z"
+                ><i class="fas fa-map-marked-alt fst-icon"></i>Cape Town, South
+                Africa<i class="fas fa-external-link-alt"></i
+              ></a>
+            </div>
+            <div class="cnt-box">
+              <a class="cnt-me-link icon" href="mailto:uthmaanbreda@gmail.com"
+                ><i class="fas fa-envelope fst-icon"></i
+                >uthmaanbreda@gmail.com<i class="fas fa-external-link-alt"></i
+              ></a>
+            </div>
+            <div class="cnt-box">
+              <a
+                class="cnt-me-link icon"
+                href="https://api.whatsapp.com/send?phone=+27794637741"
+                ><i class="fab fa-whatsapp icon fst-icon"></i>079 463 7741<i
+                  class="fas fa-external-link-alt"
+                ></i
+              ></a>
+            </div>
+            <div class="cnt-box">
+              <a class="cnt-me-link icon" href="https://github.com/uthmaanb"
+                ><i class="fab fa-github fst-icon"></i>Github Profile<i
+                  class="fas fa-external-link-alt"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
 
-        <div class="content-right">
+        <div class="form-container">
+          <h3 class="cnt-form-head">
+            Let's grab a <span class="stndout"> coffee </span> or send me a
+            <span class="stndout">message</span>
+          </h3>
+
           <form
             id="contact-form"
             action="https://formspree.io/f/mwkalpve"
@@ -333,7 +387,9 @@
               id="message"
               placeholder="Type your message here"
             ></textarea>
-            <button class="btn" type="submit">Submit Information</button>
+            <button class="btn" type="submit">
+              <i class="fas fa-long-arrow-alt-right"></i>
+            </button>
           </form>
         </div>
       </div>
