--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     ></script>
     <script src="./scripts/scripts.js"></script>
   </head>
-  <body>
+  <body id="homePage">
     <!-- navbar -->
     <nav class="navbar">
       <h3 class="cornerP">P</h3>
@@ -64,7 +64,7 @@
       </div>
     </nav>
     <!-- Home / Landing -->
-    <section id="homePage">
+    <section>
       <div class="homePage">
         <div class="page-title">
           <p class="p-title name">Uthmaan Breda</p>
