--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
     </section>
     <!-- Work & education / Experience -->
     <section id="XP">
-      <div class="about">
+      <div class="XP">
         <div class="page-title2">
           <p class="p-title name">Education / Experience</p>
           <p class="p-title num">3.0</p>
         </div>
-        <div class="content-left">
+        <div class="content-left-xp">
           <div class="text2">
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
