--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           ><i class="fas fa-envelope"></i
         ></a>
       </div>
-      <div class="links">
+      <ul class="links">
         <a class="link" href="#homePage">Home</a>
         <a class="link" href="#about">About</a>
         <a class="link" href="#XP">Education/Experience</a>
@@ -58,7 +58,7 @@
         <a class="link" href="#projects">Projects</a>
         <a class="link" href="#testimonials">Testimonials</a>
         <a class="link" href="#contact">Contact</a>
-      </div>
+      </ul>
       <a class="tel" href="tel:+27794637741">+27 79 463 7741</a>
     </nav>
     <!-- Home / Landing -->
@@ -500,30 +500,26 @@
                 class="cnt-me-link icon"
                 href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z"
                 ><i class="fas fa-map-marked-alt fst-icon"></i>Cape Town, South
-                Africa<i class="fas fa-external-link-alt"></i
-              ></a>
+                Africa</a
+              >
             </div>
             <div class="cnt-box">
               <a class="cnt-me-link icon" href="mailto:uthmaanbreda@gmail.com"
                 ><i class="fas fa-envelope fst-icon"></i
-                >uthmaanbreda@gmail.com<i class="fas fa-external-link-alt"></i
-              ></a>
+                >uthmaanbreda@gmail.com</a
+              >
             </div>
             <div class="cnt-box">
               <a
                 class="cnt-me-link icon"
                 href="https://api.whatsapp.com/send?phone=+27794637741"
-                ><i class="fab fa-whatsapp icon fst-icon"></i>079 463 7741<i
-                  class="fas fa-external-link-alt"
-                ></i
-              ></a>
+                ><i class="fab fa-whatsapp icon fst-icon"></i>079 463 7741</a
+              >
             </div>
             <div class="cnt-box">
               <a class="cnt-me-link icon" href="https://github.com/uthmaanb"
-                ><i class="fab fa-github fst-icon"></i>Github Profile<i
-                  class="fas fa-external-link-alt"
-                ></i
-              ></a>
+                ><i class="fab fa-github fst-icon"></i>Github Profile</a
+              >
             </div>
           </div>
         </div>
